css/main.css
:root{
    --mainBlue: #18305a;
    --notesOrange: #faa84b;
    --interactiveMinHeight: 600px;
    --actionGreen: #6fc284;
    --skyBlue: #dbf1f9;
    --yellow: #ffd54f;
    --pink: #f15e4c;
    --red: #ed2027;
    --actionBlue: #a2c1e6;
    --endBlue: #29487a;
} 

body{
    margin: 0;
    padding: 0;
}
    
body{
    font-family: Calibri, Arial, Helvetica, sans-serif;
}

.titleHead{
    color: var(--mainBlue)
}

.titleHead h1{
    font-size: 40px;
    margin-bottom: 0px;
}

.titleHead h2{
    margin-top: 0px;
    font-size: 20px;
}


.container{
    min-width: 50%;
    max-height: 800px;
    min-height: var(--interactiveMinHeight);
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    margin: 0 12%;
}
.container > h1{
    color: var(--mainBlue);
    font-size: 30px;
}

.container > h2{
    color:var(--mainBlue);
    font-size: 20px;
}

.interactive{
    display: flex;
    flex-flow: row nowrap;
    flex-direction: row;  
    width: 100%;
}

.left{
    min-width: 340px;   
}

.milestoneTree{
    min-height:  var(--interactiveMinHeight);
    background-color: var(--skyBlue);
    display: flex;
    flex-flow: column wrap;
    margin-right: 10px;
    padding:5px;
    align-items:center;
}

.left
.btns{
    display: flex;
    flex-flow: row nowrap;
    width:100%;
    margin-top:10px;
}

/* #leftLine {
    position: absolute;
    left: 139px;
    text-align: center;
    max-width: 140px;
    top: 20%;
} */

#btnStartOver, #btnBack{
    border: 2px solid var(--mainBlue);
    border-radius: 2px;
    padding:3px;
    color:var(--mainBlue);
    width: 46%;
    display: flex;
    justify-content: center;
    padding: 4% 0;
}

#btnStartOver:hover, #btnBack:hover{
    background-color: var(--mainBlue);
    color: var(--skyBlue);
}

#btnBack{
    margin-left: 10px;
}

#milestoneLines{
    border-width: 3px 3px 0px 3px;
    border-color: var(--mainBlue);
    width: 50%;
    height: 80%;
    margin-top: 5px;
    display: flex;
    flex-flow: column;
    border-style: solid;
    min-height: 630px;
}

div.milestoneTree span{
    color: var(--mainBlue);
    font-size: 20px;
    font-weight: 700;
    margin-bottom:0;
    margin-top:5px;
}
.right{
    min-width: 73%;
    display: flex;
    flex-flow: column wrap;
    min-height: var(--interactiveMinHeight);
    max-width: 73%;
}

.action{
    border: 2px solid gray;
    min-height: 50px;
    margin-bottom: 6px;
    padding: 20px;
    border: solid 2px  var(--mainBlue);

}
.action p, .notes p{
    margin-left: 10px;
}
div.action > span, div.notes > span{
    font-weight: 700;
}

div.notes > span{
    color: var(--notesOrange);
}

.action.green {
    background-color: var(--actionGreen);
}
#selectionBlock{
    min-height: 200px;
    border: 2px solid grey;
    padding:0;
}
#prompQuestion{
    background-color: var(--mainBlue);
    color: #fff;
    min-height: 50px;
    border-bottom: 2px solid grey;
    padding: 20px;
}
.answerSelection{
    background-color: #fff;
    color: rgb(98, 98, 98);
    min-height: 50px;
    border-bottom: 2px solid grey;
    padding: 20px;
}

.answerSelection:hover{
    background-color: rgb(216, 216, 216);
}

.answerSelection:last-child{
    border-bottom: none;
}
.notes{
    padding: 20px;
    min-height: 100px;
    border: 2px solid grey;
    margin-top:6px;
}



p.treeRight {
    left: 75px;
    position: relative;
    background: var(--skyBlue);
    padding: 10px;
    font-weight: bold;
    color: var(--mainBlue);
    border: 3px solid var(--mainBlue);
    border-radius: 4px;
    text-align: center;
}
p.treeRight.item:last-child{
    border: 1px solid var(--mainBlue);
}

.end {
    background-color: var(--mainBlue);
    border: 1px solid var(--mainBlue);
    border-radius: 5px;
    padding: 10px;
    color:  #fff;
    min-width: 78px;
}
p.treeLeft {
    left: -74PX;
    text-align: center;
    position: relative;
    background: var(--skyBlue);
    padding: 10px;
    font-weight: bold;
    color: var(--mainBlue);
    border: 3px solid var(--mainBlue);
    border-radius: 4px;
}
p.treeLeft:last-of-type, p.treeRight:last-of-type{
    border: 1px solid var(--mainBlue);
    background-color: var(--mainBlue);
    color:#fff;
}

.severity{
    width:100%;
    margin-top: 5px;
    display: flex;
    flex-flow: row wrap;

}

.severity span.degree {
    width: 19%;
    padding: .5%;
    display: flex;
    justify-content: center;
}

.green{
    background-color: var(--actionGreen);
}
.yellow{
    background-color: var(--yellow);
}
.orange{
    background-color: var(--notesOrange);
}
.pink{
    background-color: var(--pink);
}
.red{
    background-color: var(--red);
}

